# jimgui

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  appveyor.yml  build.gradle.kts  settings.gradle.kts
.circleci/: config.yml
.github/: FUNDING.yml
buildSrc/: build.gradle.kts
buildSrc/src/: GenDrawListTask.kt  GenFDTask.kt  GenFontAtlasTask.kt  GenFontConfigTask.kt  GenFontTask.kt  GenGenTask.kt  GenIOTask.kt  GenJavaTask.kt  GenNativeHeaderTask.kt  GenNativeTypesTask.kt  GenStyleTask.kt  GenTask.groovy  GenTask.kt  ImGuiHeaderParser.kt  enum-generators.kt  flag-generators.kt  generate-imgui-io.kt  generate-native-headers.kt  generation-utilities.kt  naitve-build.kt  sort-specs.kt
core/: build.gradle.kts  module-info.java
core/jni/: .gitignore  CMakeLists.txt  README.md  basics.hpp  cpp_interop.cpp  dx11_impl.cpp  dx9_impl.cpp  glfw_impl.cpp  hand_written_bindings.cpp  hand_written_bindings.h  imgui_ext.cpp  imgui_ext.h  impl_header.h  jimgui.cpp  overloads_helper.cpp  overloads_helper.hpp  pre.sh  trivial_impl.cpp  win32-build.bat  win32-build.sh  win32_impl.cpp  win32_impl.h
core/jni/cmake-modules/: FindDirectX.cmake  FindWindowsSDK.cmake
core/jni/config/: fd_customization.h  imconfig.h
core/jni/project/: basics.hpp  cpp_interop.cpp  dx11_impl.cpp  dx9_impl.cpp  dx_shared.cpp  fd_wrapper.cpp  glfw_impl.cpp  hand_written_bindings.cpp  hand_written_bindings.h  imgui_ext.cpp  imgui_ext.h  impl_header.cpp  impl_header.h  overloads_helper.cpp  overloads_helper.hpp  win32_impl.cpp  win32_impl.h
core/jni/win32-glfw/: .gitignore  CMakeLists.txt  build.pl  main-test.cpp
core/src/org/ice1000/jimgui/: JImComboFlags.java  JImCond.java  JImDir.java  JImDrawList.java  JImFileDialog.java  JImFocusedFlags.java  JImFont.java  JImFontAtlas.java  JImFontAtlasFlags.java  JImFontConfig.java  JImGui.java  JImGuiCond.java  JImGuiFont.java  JImGuiIO.java  JImHoveredFlags.java  JImSelectableFlags.java  JImSortSpecs.java  JImStr.java  JImStyle.java  JImStyleVar.java  JImStyleVars.java  JImTextureID.java  JImTreeNodeFlags.java  JImVec4.java  JImWidgets.java  JImWindowFlags.java  MutableJImVec4.java  NativeBool.java  NativeString.java  NativeStrings.java  NativeTime.java
core/src/org/ice1000/jimgui/cpp/: DeallocatableObject.java  DeallocatableObjectManager.java
core/src/org/ice1000/jimgui/flag/: Flag.java  JImBackendFlags.java  JImColorEditFlags.java  JImComboFlags.java  JImCondition.java  JImConfigFlags.java  JImDirection.java  JImDrawCornerFlags.java  JImDrawListFlags.java  JImFocusedFlags.java  JImFontAtlasFlags.java  JImHoveredFlags.java  JImInputTextFlags.java  JImMouseButton.java  JImMouseIndexes.java  JImSelectableFlags.java  JImTabBarFlags.java  JImTabItemFlags.java  JImTextEditFlags.java  JImTreeNodeFlags.java  JImWindowFlags.java  package-info.java
core/src/org/ice1000/jimgui/flags/: JImBackendFlags.java  JImColorEditFlags.java  JImComboFlags.java  JImCondition.java  JImConfigFlags.java  JImDirection.java  JImFocusedFlags.java  JImFontAtlasFlags.java  JImHoveredFlags.java  JImMouseIndexes.java  JImSelectableFlags.java  JImTreeNodeFlags.java  JImWindowFlags.java
core/src/org/ice1000/jimgui/glfw/: GlfwUtil.java
core/src/org/ice1000/jimgui/util/: ColorUtil.java  JImGuiUtil.java  JniLoader.java  NativeUtil.java  SharedState.java
core/test/org/ice1000/jimgui/dlparty/: BigCollection.java  Blobs.java  Circles.java  Curves.java  InterwebBlogosphere.java  MatrixEffect.java  QuickSortVisualization.java  Squares.java  TestBed.java  ThreeDCube.java  ThunderStorm.java  TinyLoadingScreen.java  package-info.java
core/test/org/ice1000/jimgui/features/: ComboTest.java  DateChooserTest.java  FileDialogTest.java  InputNativeString.java  InputTextTest.java  NativeStringTest.java  ProgressBarTest.java  SetWindowTitle.java  Tables.java  ToggleButtonTest.java
core/test/org/ice1000/jimgui/flag/: FlagTest.java  JImFlagsTest.java
core/test/org/ice1000/jimgui/tests/: ComboTest.java  Demo.java  EditorTest.java  Issue14.java  Issue52.java  Issue66.java  JImDrawListTest.java  JImFontTest.java  JImGuiIOTest.java  JImGuiTest.java  JImStyleVarTest.java  JImTextureTest.java  JImVec4Test.java  MultiWindowTest.java  MutableJImVec4Test.java  PlatformWindowTest.java  ProgressBarTest.java  Sandbox.java  SliderTest.java  package-info.java
extension/: build.gradle.kts
extension/src/org/ice1000/jimgui/util/: JniLoaderEx.java
extension/test/org/ice1000/jimgui/util/: JniLoaderExTest.java
fun/: build.gradle.kts  module-info.java
fun/src/dlparty/: AbstractFireworks.java  BigCollection.java  Blobs.java  BouncingBalls.java  Circles.java  Curves.java  DoomFire.java  DrivingGame.java  Guitar.java  InterwebBlogosphere.java  MatrixEffect.java  Mosaic.java  Plasma.java  PossiblyAShrub.java  QuickSortVisualization.java  RaceTrack.java  Squares.java  TestBed.java  ThreeDCube.java  ThunderStorm.java  TinyLoadingScreen.java  TixyLand.java  package-info.java
jni/: .gitignore  CMakeLists.txt  README.md  all_generated.cpp  basics.h  basics.hpp  jimgui.cpp  pre.cmd  pre.sh
kotlin-dsl/: build.gradle.kts  module-info.java
kotlin-dsl/src/: JImGuiContext.kt  jimgui.kt  primitives.kt  types.kt  util.kt
kotlin-dsl/test/: lice-test.kt  psi-viewer.kt  tabs.kt  test.kt  texture.kt
kotlin-dsl/testRes/: bizarre.lice
src/: imgui.djinni
src/org/ice1000/jimgui/: JImGui.java  JImGuiIO.java  JImVec4.java  JniLoader.java  MutableJImVec4.java
src/org/ice1000/jimgui/util/: JImGuiUtil.java  JniLoader.java  NativeUtil.java  NativeUtils.java
test/org/ice1000/jimgui/: JImGuiIOTest.java  JImGuiTest.java
test/org/ice1000/jimgui/tests/: Demo.java  JImGuiIOTest.java  JImGuiTest.java  JImVec4Test.java  MutableJImVec4Test.java  Sandbox.java
